--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+spadeadam/R/evaluate.html
+england/R/evaluate.html
+outputs/eval_spade_run_20200806-1612.html
+Peat_Depth_Model.Rproj
