--- a/.gitignore
+++ b/.gitignore
@@ -34,95 +34,31 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
-spadeadam/R/evaluate.html
+
+#rasters and shapefiles
+*.tif
+*.rds
+*.cpg
+*.dbf
+*.prj
+*.shp
+*.shx
+*.xml
+
+#data folders
+template/data/*
+template/outputs/*
+england/data/*
+england/outputs/*
+spadeadam/data/*
+spadeadam/outputs/*
+england/R/model.nb.html
 england/R/evaluate.html
+england/R/evaluate.nb.html
+england/R/explore_and_select_data.nb.html
+england/R/import_prepare_data.nb.html
+england/R/predict.nb.html
+england/R/visualise_model_results_template.nb.html
 outputs/eval_spade_run_20200806-1612.html
+spadeadam/R/evaluate.html
 Peat_Depth_Model.Rproj
-england/R/compare_models.nb.html
-spadeadam/data/elev_spade_5m.tif
-spadeadam/data/FSR peat depths 10-06-2018.CSV
-spadeadam/data/FSR-pd-20180610.cpg
-spadeadam/data/FSR-pd-20180610.dbf
-spadeadam/data/FSR-pd-20180610.prj
-spadeadam/data/FSR-pd-20180610.shp
-spadeadam/data/FSR-pd-20180610.shx
-spadeadam/data/input.data_spade_5m.rds
-spadeadam/data/parameters_spade.rds
-spadeadam/data/peatdepths-spade-FSR-20180610.cpg
-spadeadam/data/peatdepths-spade-FSR-20180610.dbf
-spadeadam/data/peatdepths-spade-FSR-20180610.prj
-spadeadam/data/peatdepths-spade-FSR-20180610.shp
-spadeadam/data/peatdepths-spade-FSR-20180610.shx
-spadeadam/data/peatdepths-spade-LM-20180412.cpg
-spadeadam/data/peatdepths-spade-LM-20180412.CSV
-spadeadam/data/peatdepths-spade-LM-20180412.dbf
-spadeadam/data/peatdepths-spade-LM-20180412.prj
-spadeadam/data/peatdepths-spade-LM-20180412.shp
-spadeadam/data/peatdepths-spade-LM-20180412.shx
-spadeadam/data/peatdepths-spade-PL-20180610.cpg
-spadeadam/data/peatdepths-spade-PL-20180610.cpg.csv
-spadeadam/data/peatdepths-spade-PL-20180610.dbf
-spadeadam/data/peatdepths-spade-PL-20180610.prj
-spadeadam/data/peatdepths-spade-PL-20180610.shp
-spadeadam/data/peatdepths-spade-PL-20180610.shx
-spadeadam/data/site_bound.rds
-spadeadam/data/site_box.cpg
-spadeadam/data/site_box.dbf
-spadeadam/data/site_box.prj
-spadeadam/data/site_box.shp
-spadeadam/data/site_box.shx
-spadeadam/data/slope_spade_5m.tif
-spadeadam/data/terr_spade_12.tif
-spadeadam/outputs/dat_overview_spade_run_20200806-1552.jpg
-spadeadam/outputs/dat_overview_spade_run_20200806-1612.jpg
-spadeadam/outputs/input.data.gs_spade_run_20200806-1612.rds
-spadeadam/outputs/model.geo__spade_run_20200806-1552.rds
-spadeadam/outputs/model.geo__spade_run_20200806-1612.rds
-spadeadam/outputs/model.geo_spade_run_20200806-1612.rds
-spadeadam/outputs/predvobs__spade_run_20200806-1612.png
-spadeadam/outputs/vgm__spade_run_20200806-1552.jpg
-spadeadam/outputs/vgm__spade_run_20200806-1612.jpg
-template/R/compare_models.nb.html
-spadeadam/data/peatdepths-spade-FSR-20180610.prj
-spadeadam/data/peatdepths-spade-FSR-20180610.shp
-spadeadam/data/peatdepths-spade-FSR-20180610.shx
-spadeadam/data/peatdepths-spade-LM-20180412.cpg
-spadeadam/data/peatdepths-spade-LM-20180412.CSV
-spadeadam/data/peatdepths-spade-LM-20180412.dbf
-spadeadam/data/peatdepths-spade-LM-20180412.prj
-spadeadam/data/peatdepths-spade-LM-20180412.shp
-spadeadam/data/peatdepths-spade-LM-20180412.shx
-spadeadam/data/peatdepths-spade-PL-20180610.cpg
-spadeadam/data/peatdepths-spade-PL-20180610.cpg.csv
-spadeadam/data/peatdepths-spade-PL-20180610.dbf
-spadeadam/data/peatdepths-spade-PL-20180610.prj
-spadeadam/data/peatdepths-spade-PL-20180610.shp
-spadeadam/data/peatdepths-spade-PL-20180610.shx
-spadeadam/data/site_bound.rds
-spadeadam/data/site_box.cpg
-spadeadam/data/site_box.dbf
-spadeadam/data/site_box.prj
-spadeadam/data/site_box.shp
-spadeadam/data/site_box.shx
-spadeadam/data/slope_spade_5m.tif
-spadeadam/data/terr_spade_12.tif
-spadeadam/outputs/dat_overview_spade_run_20200806-1552.jpg
-spadeadam/outputs/dat_overview_spade_run_20200806-1612.jpg
-spadeadam/outputs/input.data.gs_spade_run_20200806-1612.rds
-spadeadam/outputs/model.geo__spade_run_20200806-1552.rds
-spadeadam/outputs/model.geo__spade_run_20200806-1612.rds
-spadeadam/outputs/model.geo_spade_run_20200806-1612.rds
-spadeadam/outputs/predvobs__spade_run_20200806-1612.png
-spadeadam/outputs/vgm__spade_run_20200806-1552.jpg
-spadeadam/outputs/vgm__spade_run_20200806-1612.jpg
-template/R/compare_models.nb.html
-england/R/compare_models.nb.html
-spadeadam/data/elev_spade_5m.tif
-england/R/compare_models.nb.html
-spadeadam/data/elev_spade_5m.tif
-spadeadam/data/FSR peat depths 10-06-2018.CSV
-spadeadam/data/FSR-pd-20180610.cpg
-spadeadam/data/FSR-pd-20180610.dbf
-spadeadam/data/FSR-pd-20180610.prj
-spadeadam/data/FSR-pd-20180610.shp
-spadeadam/data/FSR-pd-20180610.shx
